# assessment

./: .agignore  .gitignore  Cargo.toml  Config.toml  assignment.txt  check-upgrade.bat  clean-svgs.bat  generate-docs.bat  rust-components.bat  rustfmt.toml  watch.bat
.cargo/: config.toml
client/: Cargo.toml
client/src/: api.rs  images.rs  lib.rs  prelude.rs  svgs.rs
client/src/global_style/: fonts.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml  Config.toml  nginx.conf  response.html
server/src/: api.rs  error.rs  main.rs  prelude.rs
server/ssl/: import.txt  rootCA.key  rootCA.pem  rootCA.srl  server.crt  server.csr  server.csr.cnf  server.key  v3.ext
shared/: Cargo.toml
shared/src/: api.rs  config.rs  lib.rs  prelude.rs
tools/: clean-svgs.rs  svg_cleaner.rs  svgo.yml
