[workspace]
members = [
	"server",
	"shared",
	"client",
]

[patch.crates-io]
hobo = { path = "hobo/lib" }
hobo_derive = { path = "hobo/derive" }
hobo_css = { path = "hobo/css" }
hobo_css_macros = { path = "hobo/css/macros" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.bincode]
opt-level = 3
