[package]
name = "client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bincode = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"
console_log = { version = "0.2", features = ["color"] }
derive_more = "0.99"
extend = "1"
fehler = "1"
futures = "0.3"
hobo = "0.1"
itertools = "0.10"
js-sys = "0.3"
log = "0.4"
once_cell = "1"
paste = "1"
reqwest = { version = "0.11", features = ["json"] }
roxmltree = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
smart-default = "0.6"
sugars = "3"
toml = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "nightly", "strict-macro", "enable-interning"] }
wasm-bindgen-futures = "0.4"
