[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.11"
actix-files = "=0.6.0-beta.4"
actix-web = { version = "=4.0.0-beta.5", features = ["rustls"] }
ambassador = "0.2"
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.8"
extend = "1"
fehler = "1"
futures = "0.3"
itertools = "0.10"
log = "0.4"
log-derive = "0.4"
minifier = "0.0.41"
minify = "1"
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
sugars = "3"
tokio = "1"
toml = "0.5"

# TEMP
actix-service = "=2.0.0-beta.5"

[dev-dependencies]
shared = { path = "../shared", features = ["test"] }
