[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
extend = "1"
macros = { path = "../macros" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

[features]
test = []
